--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal:'Inter';
-    --botao-azul-efeito: #21405a;
+    --botao-azul-efeito: #9b6bf5;
 }
 
 body {
